added favicons, updated some config

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Saurabh Mogre / Home Page"
+title                    : "Saurabh Mogre/Personal webpage"
 title_separator          : "-"
 name                     : "Saurabh Mogre"
 description              : "Personal webpage for Saurabh Mogre"
