updated layout, cv, talks

--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  workshops:
     output: true
     permalink: /:collection/:path/
   talks:
@@ -216,10 +216,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _workshops
   - scope:
       path: ""
-      type: portfolio
+      type: workshops
     values:
       layout: single
       author_profile: true
