--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
 main:
+  - title: "About"
+    url: /about/
+    
   - title: "Publications"
     url: /publications/
 
@@ -8,9 +11,6 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
            
   - title: "CV"
     url: /cv/
